components/test/res/TestsParameterInput/TestNoParametersTaged.scala

import ch.epfl.lamp.specialized._

class C[T, U] {

   def m() = {
      specialized {
        0
      }
   }
}